--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lotide",
-  "version": "1.0.0",
-  "description": "",
+  "name": "@samo-13/lotide",
+  "version": "1.0.1",
+  "description": "Mini lodash library",
   "main": "assertArraysEqual.js",
   "directories": {
     "test": "test"
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/samo-13/lotide.git"
   },
-  "author": "",
+  "author": "Sarah Moss",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/samo-13/lotide/issues"
